content/_generated-doc/2.7/config/quarkus-config-group-index-index-dependency-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-config-group-index-index-dependency-config_quarkus.arc.exclude-dependency-artifacts-that-should-be-excluded-from-discovery]]link:#quarkus-config-group-index-index-dependency-config_quarkus.arc.exclude-dependency-artifacts-that-should-be-excluded-from-discovery[Artifacts that should be excluded from discovery]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-config-group-index-index-dependency-config_quarkus.arc.exclude-dependency.-dependency-name-.group-id]]`link:#quarkus-config-group-index-index-dependency-config_quarkus.arc.exclude-dependency.-dependency-name-.group-id[quarkus.arc.exclude-dependency."dependency-name".group-id]`

[.description]
--
The maven groupId of the artifact.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-config-group-index-index-dependency-config_quarkus.arc.exclude-dependency.-dependency-name-.artifact-id]]`link:#quarkus-config-group-index-index-dependency-config_quarkus.arc.exclude-dependency.-dependency-name-.artifact-id[quarkus.arc.exclude-dependency."dependency-name".artifact-id]`

[.description]
--
The maven artifactId of the artifact.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-config-group-index-index-dependency-config_quarkus.arc.exclude-dependency.-dependency-name-.classifier]]`link:#quarkus-config-group-index-index-dependency-config_quarkus.arc.exclude-dependency.-dependency-name-.classifier[quarkus.arc.exclude-dependency."dependency-name".classifier]`

[.description]
--
The maven classifier of the artifact.
--|string 
|

|===